# uncrypt

./: .gitignore  Cargo.toml  TODO.md  server
client/: elm-land.json  elm.json  index.html  style.css
client/public/: style.css
client/src/: Api.elm  Auth.elm  Cryptogram.elm  Effect.elm  Main.elm  Settings.elm  Shared.elm  interop.js
client/src/Api/: Aristocrat.elm  Auth.elm  Baconian.elm  Http.elm  Profile.elm  Puzzle.elm
client/src/Auth/: User.elm
client/src/Components/: Api.elm  Icon.elm  Input.elm  Puzzle.elm
client/src/Layouts/: Navbar.elm
client/src/Pages/: About.elm  Aristocrat.elm  Baconian.elm  Home_.elm  Login.elm  Profile.elm  Register.elm  Settings.elm
client/src/Pages/Profile/: Username_.elm
client/src/Settings/: Theme.elm
client/src/Shared/: Model.elm  Msg.elm  Settings.elm
client/static/: style.css
client/static/assets/: style.css
migrations/2023-01-02-235537_create_messages/: up.sql
migrations/2023-01-02-235537_initial_setup/: down.sql  up.sql
migrations/2023-01-04-031115_create_users/: up.sql
server/: server.nimble
server/src/: server.nim
src/: auth.rs  client.rs  error.rs  exp.rs  lib.rs  main.rs  models.rs  schema.rs  server.nim  util.rs
src/api/: aristocrat.rs  auth.rs  baconian.rs  message.rs  mod.rs  profile.rs  solves.rs
