[package]
name = "cryptopuz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argon2 = "0.4.1"
axum = { version = "0.6.1", features = ["macros", "headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
base64 = "0.20.0"
bitvec = "1.0.1"
deadpool = "0.9.5"
diesel = { version = "2.0.2", features = ["postgres"] }
diesel-async = { version = "0.1.1", features = ["deadpool", "postgres"] }
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
nanoid = "0.4.0"
password-hash = "0.4.2"
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
